<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="search_terms_hint">Enter some search terms</string>
    <string name="title_activity_grid_image_search_filter">Google Image Searcher - Filter Options</string>
    <string name="action_settings">Settings</string>
    <string name="filter_search">Filter Search</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="enter_site_filter">Enter a site to filter</string>
    <string name="search">Search</string>
    <string name="load_more">Load More &#8230;</string>

    <string-array name="image_size_array">
        <item>Any</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="color_filter_array">
        <item>Any</item>
        <item>Black and White</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="image_type_array">
        <item>Any</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clip art</item>
    </string-array>

</resources>
